Add script to fetch followers

--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "0.1.0",
   "main": "index.js",
   "author": "Thomas Broadley <buriedunderbooks@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
